tdf#123628 DOCX export: fix color change of unvisited hyperlinks

by exporting the character style name "Hyperlink" requested by Word
instead of the previous "Internet Link" to allow unvisited/visited color
change at opening the link in the document editor.

Change-Id: Ib5e22f8f26a6f3c71543d6e5410d6cc263b83830